--- a/index.html
+++ b/index.html
@@ -9,62 +9,136 @@
   </head>
   <body>
     <!-- LANDING PAGE -->
-    <section class="header">
-      <img src="/images/zuri-logo-full.svg" alt="zuri logo" class="zuri-logo" />
+    <main>
+      <section class="header">
+        <img
+          src="/images/zuri-logo-full.svg"
+          alt="zuri logo"
+          class="zuri-logo"
+        />
 
-      <h2 class="hero-text">Learn, Build, Grow.</h2>
+        <h2 class="hero-text">Learn, Build, Grow.</h2>
 
-      <p class="sub-hero">
-        Unlock your Brilliance with our hands-on <span class="red-font">beginner</span> and
-        <span class="red-font">expert training</span>. Zuri Team has been immensely successful in
-        creating a global network of a highly adept intelligent workforce that
-        can help your company achieve their mission-critical <span class="red-font"> projects and goals </span>
-      </p>
-      <div class="button">
-      <button class="new-button">I'm new to the industry</button>
-      <button class="need-button">I need industry experience</button>
+        <p class="sub-hero">
+          Unlock your Brilliance with our hands-on
+          <span class="red-font">beginner</span> and
+          <span class="red-font">expert training</span>. Zuri Team has been
+          immensely successful in creating a global network of a highly adept
+          intelligent workforce that can help your company achieve their
+          mission-critical <span class="red-font"> projects and goals </span>
+        </p>
+        <div class="button">
+          <a href="/zuri-training.html">
+          <button class="new-button" type="button">I'm new to the industry</button>
+          </a>
+          <button type="button" class="need-button">I need industry experience</button>
+        </div>
+      </section>
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
+      <section class="section2">
+        <p class="red-font">BY ZURI Team</p>
+        <p class="text2">
+          We cater for every level of expertise and needs in the industry
+        </p>
+      </section>
+
+      <section class="section3">
+        <img src="./images/left_bvmv7q.png" alt="left_bvmv7q" class="left-bg" />
+
+        <img
+          src="./images/right_yz6hn3.png"
+          alt="right_yz6hn3"
+          class="right-bg"
+        />
+
+        <div class="box1">
+          <img src="/images/zuri-training-img.svg" alt="zuri-training" />
+          <p>
+            We understand a complete beginner cannot become a professional after
+            a few weeks, the aim here is to get you familiar enough with each
+            the tools such that you’ll be able to continue learning on your own
+            with minimal support.
+          </p>
+          <br />
+          <a href="#" target="_blank" class="red-font"
+            >I want to be trained >
+          </a>
+        </div>
+        <div class="box2">
+          <img src="/images/zuri-internship-img.svg" alt="zuri-internship" />
+          <p>
+            We place you in a work simulation. We give you tasks every week, the
+            tasks ranges from easy to hard as you progress from stage to stage,
+            making it to the final stage means you are ready for actual work.
+          </p>
+          <br />
+          <a href="#" target="_blank" class="red-font"
+            >I want to join the internship ></a
+          >
+        </div>
+        <div class="box3">
+          <img src="/images/zuri-talent-img.svg" alt="" />
+          <p>
+            Keeping pace with projects and being on the look out for the
+            extremely talented individuals has become ever more challenging.
+            Here is where Zuri Team comes into play to bring the best suited
+            talent for your company
+          </p>
+          <br />
+          <a href="#" target="_blank" class="red-font"
+            >I am looking for talent ></a
+          >
+        </div>
+      </section>
+    </main>
+    <section class="section4">
+      <div class="logo2">
+        <img src="./images/zuri-logo-full.svg" alt="" />
+      </div>
+
+      <div class="links">
+          <P>Links</P>
+        <a href="#" class="red-font">Store</a>
+        <br>
+        <a href="#" class="red-font">Blog</a>
+      </div>
+
+      <div class="contact">
+          <p>Contact</p>
+        <p>8 Jubliee-CMD Road, Magodo, Lagos State</p>
+        <a href="#" class="red-font">hello@zuri.team</a>
+      </div>
+
+      <div class="socials">
+          <p>Follow Us</p>
+        <img src="./images/fb.png" alt="Fb">
+        <img src="./images/twitter.png" alt="Twitter">
+        <img src="./images/IG.png" alt="IG">
+        <img src="./images/in.png" alt="LinkedIn">
       </div>
     </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <section class="section2">
-        <p class="red-font">BY ZURI Team</p>
-        <p class="text2">We cater for every level of expertise and needs in the industry</p>
-        <img src="./images/left_bvmv7q.png" alt="left_bvmv7q">
-        <img src="./images/right_yz6hn3.png" alt="right_yz6hn3">
-    </section>
-
-    <section class="section3">
-        <div class="box1">
-            <img src="/images/zuri-training-img.svg" alt="zuri-training">
-        </div>
-        <div class="box2">
-            <img src="/images/zuri-internship-img.svg" alt="zuri-internship">
-        </div>
-        <div class="box3">
-            <img src="/images/zuri-talent-img.svg" alt="">
-        </div>
-    </section>
-    <section></section>
-
-    <section class="body"></section>
-    <section class="footer"></section>
+    <footer>
+        <hr>
+        <p>© 2020 ZURI TEAM</p>
+    </footer>
   </body>
 </html>
